tests/golden/errors/unused_expression.stderr
error[unused]: this value is never used: a non-final line binds a name, or is an effect joining the group
  --> unused_expression.kso:1:3
   1 | 1 + 1
         ^
